--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node index.js && node analyze.js",
+    "generate" : "node index.js",
     "analyze": "node analyze.js"
   },
   "author": "",
